fix z-index

--- a/client/src/main/styles/components/_header.scss
+++ b/client/src/main/styles/components/_header.scss
@@ -39,6 +39,8 @@ $nav-height: 35px;
   justify-content: flex-start;
   cursor: pointer;
   margin-right: 8px;
+  position: relative;
+  z-index: 2;
 }
 .header__logo-image-container {
   height: 32px;
